src/components/AddCommentForm/AddCommentForm.module.scss
@import '../../styles/_variables';
@import '../../styles/_breakpoints';

.AddComment {
  display: flex;
  flex-direction: column;
  // justify-content: center;
  align-items: center;
  background: linear-gradient(rgba(88, 57, 154, 0), rgba(73, 57, 154, 0.3))
    no-repeat center center fixed;
  min-height: 100%;
  position: absolute;
  width: 100%;
  padding: 1rem 0;
}

@include mobilePortrait {
  .AddComment {
    padding: 1rem;
  }
}

.addCommentForm {
  border: solid 2px var(--black);
  text-align: center;
  width: 90%;
  max-width: 450px;
  padding: 1rem;
  margin: 0 auto 1.5rem;
  background-color: white;
}

@include mobilePortrait {
  .addCommentForm {
    margin: 0 auto 1.5rem;
  }
}

.addCommentContainer {
  top: 94px;
  position: relative;
  display: flex;
  width: 90%;
  flex-direction: column;
  align-items: center;
}

// @include mobilePortrait {
//   .addCommentContainer {
//     width: 85%;
//   }
// }

@media (min-width: 600px) {
  .addCommentForm {
    width: 500px;
  }
}

.addCommentLabel,
.contentInput {
  display: block;
  margin-top: 1rem;
}

.addCommentLabel {
  margin-bottom: 1.5rem;
  color: var(--black);
}

.contentInput {
  margin-left: auto;
  margin-right: auto;
  width: 90%;
  margin-bottom: 1rem;
}

// @include mobilePortrait {
//   .contentInput {
//     width: 80%;
//   }
// }

.dashboardLink {
  text-align: center;
  display: inline-block;
  // position: relative;
  // top: 0;
  text-align: center;
  transition: color 0.2s;
  &:hover {
    color: var(--dark1);
  }
}

.submitAddComment {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

#backToPostButton {
  border: none;
  background-color: transparent;
  padding: 0;
  margin-bottom: 1rem;
  font-size: 1rem;
  color: var(--black);
  font-family: 'Nunito', sans-serif;
}

#backToPostButton p {
  transition: 0.2s color;
  &:hover {
    color: var(--dark1);
  }
}

